--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -27,19 +27,21 @@
         });
     </script>
 }
-<div class="navigation_string">
-    <div class="way">
-        @Html.ActionLink("Главная", "index", "home")
-        <pre> </pre>
-        <p>/</p>
-        <pre> </pre>
-        @Html.ActionLink("ЖК Новострои", "index", "newbuilding")
-        <pre> </pre>
-        <p>/</p>
-        <pre> </pre>
-        @Html.ActionLink(Model.NewBuilding.Name, "detail", "newbuilding", new { id = Model.NewBuilding.Id })
+<span class="noprint">
+    <div class="navigation_string">
+        <div class="way">
+            @Html.ActionLink("Главная", "index", "home")
+            <pre> </pre>
+            <p>/</p>
+            <pre> </pre>
+            @Html.ActionLink("ЖК Новострои", "index", "newbuilding")
+            <pre> </pre>
+            <p>/</p>
+            <pre> </pre>
+            @Html.ActionLink(Model.NewBuilding.Name, "detail", "newbuilding", new { id = Model.NewBuilding.Id })
+        </div>
     </div>
-</div>
+</span>
 <div class="h2novostroy">
     <h2>@Model.NewBuilding.Name</h2>
     <div class="favorite">
@@ -64,37 +66,46 @@
 {
     int i = 0;
     int j = 0;
+    <span class="noprint">
 
-    <div id="products_example">
-        <div id="products">
-            <div class="slides_container">
-                @foreach (var item in Model.NewBuilding.Images)
+        <div id="products_example">
+            <div id="products">
+                <div class="slides_container">
+                    @foreach (var item in Model.NewBuilding.Images)
                 {
                     if (i > 2)
                     {
                         break;
                     }
                     i++;
-                    <a><img src="@Url.Content(item.Url + item.FileName)" width="767" height="600" alt=""></a>
-                }
+                        <a><img src="@Url.Content(item.Url + item.FileName)" width="767" height="600" alt=""></a>
+                    }
 
-            </div>
-            <ul class="pagination">
+                </div>
+                <ul class="pagination">
 
-                @foreach (var item in Model.NewBuilding.Images)
+                    @foreach (var item in Model.NewBuilding.Images)
                 {
                     if (j > 2)
                     {
                         break;
                     }
                     j++;
-                    <li><a href="#"><img src="@Url.Content(item.Url + item.FileName)" alt=""></a></li>
-                }
+                        <li><a href="#"><img src="@Url.Content(item.Url + item.FileName)" alt=""></a></li>
+                    }
 
-            </ul>
+                </ul>
+            </div>
         </div>
-    </div>
+    </span>
 }
+<div class="seotext">
+    <div class="print1">
+        <a href='javascript:window.print(); void 0;'>
+            <img src="~/Content/images/pechat.png" />
+        </a>
+    </div>
+</div>
 <div class="table_of_prod">
     <table>
         <tr>
@@ -122,9 +133,9 @@
             <td>@Model.NewBuilding.FloatQuantity</td>
         </tr>
         @*<tr>
-            <td>Планировка квартир</td>
-            <td>@Model.NewBuilding.Construct</td>
-        </tr>*@
+                <td>Планировка квартир</td>
+                <td>@Model.NewBuilding.Construct</td>
+            </tr>*@
         <tr>
             <td>Материал стен</td>
             <td>@Model.NewBuilding.WallMaterial</td>
@@ -184,64 +195,66 @@
     </table>
 </div>
 @if (Model.NewBuilding.PlanImages != null && Model.NewBuilding.PlanImages.Count > 0)
-{
+            {
     <div class="planirovka">
         @foreach (var item in Model.NewBuilding.PlanImages)
         {
-            <a class="plan" rel="group" title="Планировка" href="@Url.Content(item.Url + item.FileName)"><img src="@Url.Content(item.Url + item.FileName)" border="0" /></a>
+            <a class="plan" rel="group" href="@Url.Content(item.Url + item.FileName)"><img src="@Url.Content(item.Url + item.FileName)" border="0" /></a>
         }
     </div>
 }
-@if (!String.IsNullOrEmpty(Model.NewBuilding.YouTubeUrl))
-{
-    <div class="video-youtube">
-        <iframe width="711" height="533" src="https://www.youtube.com/embed/@Model.NewBuilding.YouTubeUrl" frameborder="0" allowfullscreen></iframe>
-    </div>
-}
-<div id="mapnovostroy_prod">
-    <iframe src="https://maps.google.com/maps?q=@Model.NewBuilding.Latitude.ToString(CultureInfo.InvariantCulture),@Model.NewBuilding.Longitude.ToString(CultureInfo.InvariantCulture)&hl=es;z=14&amp;output=embed" width="1054px" height="495px" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
-
-
-<div class="h2novostroy"><h2>Другие Новостройки</h2></div>
-<div class="othernovostroy">
-    <ul class="prods" id="data-container">
-        @if (Model.OtherNewBuildings.Count > 0)
-        {
-            foreach (var item in Model.OtherNewBuildings)
+<span class="noprint">
+    @if (!String.IsNullOrEmpty(Model.NewBuilding.YouTubeUrl))
             {
-                <div class="data-item">
-                    <li>
-                        @if (item.IsExclusive)
-                        {
-                            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
-                        }
-                        else if (item.IsHot)
-                        {
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                        }
-                        else
-                        {
-                            <div class="redimg"><img src="~/Content/images/newred.png"></div>
-                        }
-                        @if (item.Images != null && item.Images.Count > 0)
-                        {
-                            <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
-                        }
-                        else
-                        {
-                            <a href="~/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
-                        }
-                        <div class="min-content">
-                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
-                            <h3>@item.Name</h3>
-                            <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
-                            <p class="cost">от @item.Price грн/м²</p>
-                            <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
-                        </div>
-                    </li>
-                </div>
+        <div class="video-youtube">
+            <iframe width="711" height="533" src="https://www.youtube.com/embed/@Model.NewBuilding.YouTubeUrl" frameborder="0" allowfullscreen></iframe>
+        </div>
+    }
+    <div id="mapnovostroy_prod">
+        <iframe src="https://maps.google.com/maps?q=@Model.NewBuilding.Latitude.ToString(CultureInfo.InvariantCulture),@Model.NewBuilding.Longitude.ToString(CultureInfo.InvariantCulture)&hl=es;z=14&amp;output=embed" width="1054px" height="495px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
+
+    <div class="h2novostroy"><h2>Другие Новостройки</h2></div>
+    <div class="othernovostroy">
+        <ul class="prods" id="data-container">
+            @if (Model.OtherNewBuildings.Count > 0)
+            {
+                foreach (var item in Model.OtherNewBuildings)
+                {
+                    <div class="data-item">
+                        <li>
+                            @if (item.IsExclusive)
+                            {
+                                <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
+                            }
+                            else if (item.IsHot)
+                            {
+                                <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                            }
+                            else
+                            {
+                                <div class="redimg"><img src="~/Content/images/newred.png"></div>
+                            }
+                            @if (item.Images != null && item.Images.Count > 0)
+                            {
+                                <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
+                            }
+                            else
+                            {
+                                <a href="~/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
+                            }
+                            <div class="min-content">
+                                <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
+                                <h3>@item.Name</h3>
+                                <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
+                                <p class="cost">от @item.Price грн/м²</p>
+                                <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
+                            </div>
+                        </li>
+                    </div>
+                }
             }
-        }
-    </ul>
-</div>
+        </ul>
+    </div>
+</span>
