--- a/ReHouse.FrontEnd/Views/Home/About.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/About.cshtml
@@ -22,7 +22,14 @@
 
 <div class="about_company">
     <h2>О компании</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in renim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in renim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in renim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in renim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in renim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <p>Rehouse — международная риэлторская компания с мировым именем и сетью филиалов во многих странах мира теперь в Украине, г.Одесса.
+
+Команда профессионалов поможет в приобретении или продаже всех видов недвижимости в любой точке планеты, по лучшим ценам и в кратчайшие сроки. Помогаем всем, кто интересуется выгодными сделками на рынке жилых и коммерческой объектов.
+
+Ассортимент объектов: от маленьких уютных квартир до элитной недвижимости позволяет найти вариант, о которой Вы мечтали.
+Агенты Rehouse Odessa ориентируются на заключение эксклюзивных договоров по продаже недвижимости, благодаря этому наши клиенты получают результат быстро, качественно и надежно.
+
+Наша команда стремится создавать длительные отношения с клиентам и повторное обращение их радует и вдохновляет нас. Мы воплотим вашу мечту в реальность!</p>
 </div>
 <div class="photo_company">
     <a class="plan" rel="group" title="Наша команда" href="~/content/images/rehouse10.jpeg"><img src="~/content/images/rehouse10.jpeg" border="0" width="400" height="600" /></a>
