--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
@@ -264,7 +264,8 @@
             <ol>
                 <li><a href="~/cabinet/rent/flat">Квартиры</a></li>
                 <li><a href="~/cabinet/rent/house">Дома</a></li>
-                <li><a href="~/cabinet/rent/homestead">Участки</a></li>
+                @*<li><a href="~/cabinet/rent/homestead">Участки</a></li>*@
+                <li><a href="~/cabinet/rent/commerce">Коммерция</a></li>
             </ol>
         </li>
         <li><a class="preActive active" href="~/cabinet/newbuilding/list">ЖК Новострои</a></li>
