--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -135,7 +135,8 @@
                         <ol>
                             <li><a href="~/rent/flat">Снять квартиру</a></li>
                             <li><a href="~/rent/house">Снять дом</a></li>
-                            <li><a href="~/rent/homestead">Снять участок</a></li>
+                            @*<li><a href="~/rent/homestead">Снять участок</a></li>*@
+                            <li><a href="~/rent/commerce">Снять коммерцию</a></li>
                         </ol>
                     </li>
                     <li><a href="~/newbuilding/">ЖК Новострои</a></li>
