--- a/ReHouse.FrontEnd/Views/Rent/Commerce.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Commerce.cshtml
@@ -7,10 +7,10 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink("Снять коммерческую", "commerce", "rent")
+        @Html.ActionLink("Снять коммерцию", "commerce", "rent")
     </div>
 </div>
-<div class="h2novostroy"><h2>Аренда коммерческой в Одессе</h2></div>
+<div class="h2novostroy"><h2>Аренда коммерции в Одессе</h2></div>
 
 @Html.Partial("Advert/_filters", Model)
 
