--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Commerce.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Commerce.cshtml
@@ -23,7 +23,8 @@
             <ol>
                 <li><a href="~/cabinet/rent/flat">Квартиры</a></li>
                 <li><a href="~/cabinet/rent/house">Дома</a></li>
-                <li><a href="~/cabinet/rent/homestead">Участки</a></li>
+                @*<li><a href="~/cabinet/rent/homestead">Участки</a></li>*@
+                <li><a href="~/cabinet/rent/commerce">Коммерция</a></li>
             </ol>
         </li>
         <li><a class="3" href="~/cabinet/newbuilding/list">ЖК Новострои</a></li>
