--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -232,7 +232,8 @@
                                 @*<li>@Html.ActionLink("Снять участок", "homeStead", "rent")</li>*@
                                 <li><a href="~/rent/flat">Снять квартиру</a></li>
                                 <li><a href="~/rent/house">Снять дом</a></li>
-                                <li><a href="~/rent/homestead">Снять участок</a></li>
+                                @*<li><a href="~/rent/homestead">Снять участок</a></li>*@
+                                <li><a href="~/rent/commerce">Снять коммерцию</a></li>
                             </ol>
                         </li>
                         <li><a href="~/newbuilding/">ЖК Новострои</a></li>
