--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -7,6 +7,7 @@
     {
         <tr>
             <td><input type="checkbox" class="checkbox" id="checkbox" value="@item.Id" style="width:20px;" /></td>
+            <td>@item.Id</td>
             @if (!String.IsNullOrEmpty(item.User.FirstName) && !String.IsNullOrEmpty(item.User.SecondName))
             {
                 <td>@(item.User.FirstName + " " + item.User.SecondName)</td>
