--- a/ReHouse.FrontEnd/Views/Email/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Email/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using ReHouse.FrontEnd.Models
-@model EmailModel
+﻿@using ReHouse.Utils.DataBase.Feedback
+@model UserEmailMessage
 
 <div class="navigation_string">
     <div class="way">
